<resources>
    <string name="app_name">HootHub</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_name">Ruchi Shah</string>
    <string name="dummy_username">\@ruchi_shah10</string>
    <string name="dummy_post_text">Kobe’s passing is really sticking w/ me in a way I didn’t expect.\n\ \n\He was an icon, the kind of person who wouldn’t die this way. My wife compared it to Princess Diana’s accident.</string>
    <string name="comments_text">Comments</string>
    <string name="dummy_comment_value">2</string>
    <string name="dummy_like_value">2.8k</string>
    <string name="likes_text">Likes</string>
    <string name="dummy_name_2">James Howell</string>
    <string name="comment_text_1">F to Pay Respect for Kobe Bryant</string>
    <string name="likes_value_1">1k</string>
    <string name="comment_text">Comments</string>
    <string name="comment_value_1">1</string>
    <string name="time_post_value">48m</string>
    <string name="name">sample name</string>
    <string name="postText">sample post text\n</string>
</resources>