<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.Activity.CommentFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <!-- Foto Profile dan Username-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--Foto Profile-->
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/img_dummyprofilepic"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="0dp" />

                <!--Username-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plus_jakarta_sans"
                        android:paddingBottom="2dp"
                        android:text="@string/dummy_name"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plus_jakarta_sans"
                        android:text="@string/dummy_username"
                        android:textColor="@color/lightText"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>

            <!-- Postingan Text -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <!-- Text Postingan-->
                <!-- Text nanti diganti dengan text postingan dari DB-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:paddingBottom="2dp"
                    android:gravity="start|fill"
                    android:text="@string/dummy_post_text"
                    android:textColor="@color/black"
                    android:textSize="22sp"/>
            </LinearLayout>

            <!-- Komentar dan Like -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <!-- Komentar-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="0.5"
                    android:orientation="horizontal">

                    <!-- Jumlah Komentar -->
                    <!-- Text nanti diganti dengan jumlah value dari DB-->
                    <TextView
                        android:id="@+id/comments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plus_jakarta_sans"
                        android:paddingStart="0dp"
                        android:paddingEnd="4dp"
                        android:text="@string/dummy_comment_value"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <!-- Text Komentar -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plus_jakarta_sans"
                        android:text="@string/comments_text"
                        android:textColor="@color/lightText"
                        android:textSize="14sp" />

                </LinearLayout>

                <!-- Like -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1.2"
                    android:orientation="horizontal">

                    <!-- Jumlah Like -->
                    <!-- Text nanti diganti dengan jumlah value dari DB-->
                    <TextView
                        android:id="@+id/likes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plus_jakarta_sans"
                        android:paddingStart="0dp"
                        android:paddingEnd="4dp"
                        android:text="@string/dummy_like_value"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <!-- Text Like -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/plus_jakarta_sans"
                        android:text="@string/likes_text"
                        android:textColor="@color/lightText"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <!-- Batas Postingan dan Komentar-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightText" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>